--- a/prepros.cfg
+++ b/prepros.cfg
@@ -42,22 +42,6 @@
           "parents": [],
           "type": "html"
         },
-        "5a1dbb59": {
-          "id": "5a1dbb59",
-          "path": "css/custom.css",
-          "output": "css/custom-dist.css",
-          "name": "custom.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
         "5811d7c8": {
           "id": "5811d7c8",
           "path": "css/slides.css",
@@ -393,97 +377,6 @@
           ],
           "type": "sass"
         },
-        "2234df4b": {
-          "id": "2234df4b",
-          "path": "assets/img/inner-75-1.jpg",
-          "output": "assets/img/inner-75-1.jpg",
-          "name": "inner-75-1.jpg",
-          "category": "IMAGE",
-          "size": 28367,
-          "type": "jpg",
-          "initialSize": 28367,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "97fa7226": {
-          "id": "97fa7226",
-          "path": "assets/img/inner-75-2.jpg",
-          "output": "assets/img/inner-75-2.jpg",
-          "name": "inner-75-2.jpg",
-          "category": "IMAGE",
-          "size": 32667,
-          "type": "jpg",
-          "initialSize": 32667,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "16b483d6": {
-          "id": "16b483d6",
-          "path": "assets/img/inner-75-3.jpg",
-          "output": "assets/img/inner-75-3.jpg",
-          "name": "inner-75-3.jpg",
-          "category": "IMAGE",
-          "size": 22579,
-          "type": "jpg",
-          "initialSize": 22579,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "d9c0c616": {
-          "id": "d9c0c616",
-          "path": "assets/img/inner-75-4.jpg",
-          "output": "assets/img/inner-75-4.jpg",
-          "name": "inner-75-4.jpg",
-          "category": "IMAGE",
-          "size": 16830,
-          "type": "jpg",
-          "initialSize": 16830,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "85e637f2": {
-          "id": "85e637f2",
-          "path": "assets/img/inner-75-5.jpg",
-          "output": "assets/img/inner-75-5.jpg",
-          "name": "inner-75-5.jpg",
-          "category": "IMAGE",
-          "size": 46449,
-          "type": "jpg",
-          "initialSize": 46449,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "720ed39e": {
-          "id": "720ed39e",
-          "path": "assets/img/inner-75-6.jpg",
-          "output": "assets/img/inner-75-6.jpg",
-          "name": "inner-75-6.jpg",
-          "category": "IMAGE",
-          "size": 47131,
-          "type": "jpg",
-          "initialSize": 47131,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "93ab18d1": {
-          "id": "93ab18d1",
-          "path": "assets/img/inner-75-7.jpg",
-          "output": "assets/img/inner-75-7.jpg",
-          "name": "inner-75-7.jpg",
-          "category": "IMAGE",
-          "size": 12093,
-          "type": "jpg",
-          "initialSize": 12093,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "78112e54": {
           "id": "78112e54",
           "path": "pink.html",
@@ -516,6 +409,177 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "2e8f9ea2": {
+          "id": "2e8f9ea2",
+          "path": "README.md",
+          "output": "README.html",
+          "name": "README.md",
+          "category": "HTML",
+          "autoCompile": true,
+          "sanitize": false,
+          "gfm": true,
+          "wrapWithHtml": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "markdown"
+        },
+        "d6ed590f": {
+          "id": "d6ed590f",
+          "path": "assets/img/400_27.png",
+          "output": "assets/img/400_27.png",
+          "name": "400_27.png",
+          "category": "IMAGE",
+          "size": 213740,
+          "type": "png",
+          "initialSize": 213740,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e277f6ea": {
+          "id": "e277f6ea",
+          "path": "assets/img/400_35.png",
+          "output": "assets/img/400_35.png",
+          "name": "400_35.png",
+          "category": "IMAGE",
+          "size": 287648,
+          "type": "png",
+          "initialSize": 287648,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "06770505": {
+          "id": "06770505",
+          "path": "assets/img/400_35_evaw.png",
+          "output": "assets/img/400_35_evaw.png",
+          "name": "400_35_evaw.png",
+          "category": "IMAGE",
+          "size": 20746640,
+          "type": "png",
+          "initialSize": 20746640,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "1173aa10": {
+          "id": "1173aa10",
+          "path": "assets/img/400_41.png",
+          "output": "assets/img/400_41.png",
+          "name": "400_41.png",
+          "category": "IMAGE",
+          "size": 359375,
+          "type": "png",
+          "initialSize": 359375,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "a3ec0fff": {
+          "id": "a3ec0fff",
+          "path": "assets/img/400_41_brick.png",
+          "output": "assets/img/400_41_brick.png",
+          "name": "400_41_brick.png",
+          "category": "IMAGE",
+          "size": 17987504,
+          "type": "png",
+          "initialSize": 17987504,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e4b4efdf": {
+          "id": "e4b4efdf",
+          "path": "assets/img/400_52.png",
+          "output": "assets/img/400_52.png",
+          "name": "400_52.png",
+          "category": "IMAGE",
+          "size": 589618,
+          "type": "png",
+          "initialSize": 589618,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "6e68b35f": {
+          "id": "6e68b35f",
+          "path": "assets/img/400_52_blog.png",
+          "output": "assets/img/400_52_blog.png",
+          "name": "400_52_blog.png",
+          "category": "IMAGE",
+          "size": 16861420,
+          "type": "png",
+          "initialSize": 16861420,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "36717cbb": {
+          "id": "36717cbb",
+          "path": "assets/img/400_54.png",
+          "output": "assets/img/400_54.png",
+          "name": "400_54.png",
+          "category": "IMAGE",
+          "size": 229384,
+          "type": "png",
+          "initialSize": 229384,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e0d4294c": {
+          "id": "e0d4294c",
+          "path": "assets/img/400_54_happy.png",
+          "output": "assets/img/400_54_happy.png",
+          "name": "400_54_happy.png",
+          "category": "IMAGE",
+          "size": 18624883,
+          "type": "png",
+          "initialSize": 18624883,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "d0b0ff4b": {
+          "id": "d0b0ff4b",
+          "path": "assets/img/400_61.png",
+          "output": "assets/img/400_61.png",
+          "name": "400_61.png",
+          "category": "IMAGE",
+          "size": 512449,
+          "type": "png",
+          "initialSize": 512449,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "2d35fe38": {
+          "id": "2d35fe38",
+          "path": "assets/img/800_2.png",
+          "output": "assets/img/800_2.png",
+          "name": "800_2.png",
+          "category": "IMAGE",
+          "size": 1220183,
+          "type": "png",
+          "initialSize": 1220183,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "843dfc1f": {
+          "id": "843dfc1f",
+          "path": "assets/img/maquete.png",
+          "output": "assets/img/maquete.png",
+          "name": "maquete.png",
+          "category": "IMAGE",
+          "size": 557478,
+          "type": "png",
+          "initialSize": 557478,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
